v1 of jon slides

--- a/danni.html
+++ b/danni.html
@@ -133,7 +133,8 @@
 
 						<li class="fragment">stalk category trends with professional market research</li>
 
-						<li class="fragment">Stay abreast of industry or worldwide trends. GOOD PLACE TO START:  Google Consumer Barometer, HowToGoMo. </li>
+						<li class="fragment">Stay abreast of industry or worldwide trends. </li>
+						<li class="fragment indent">- GOOD PLACE TO START:  Google Consumer Barometer, HowToGoMo.</li>
 
 						<li class="fragment">Stalk your competitors</li>
 					</ul>
@@ -274,12 +275,8 @@
 				</section>
 
 				<section class="">
-					<h2><span>Example</span> of great navigation</h2>
+					<h2><span>Example</span></h2>
 					<img src="img/percutane.png" />
-				</section>
-
-				<section class="">
-					<h2><span>Live</span> Example</h2>
 				</section>
 
 				<section class="headline">
