Final Presentation Finished!

--- a/danni.html
+++ b/danni.html
@@ -275,7 +275,12 @@
 				</section>
 
 				<section class="">
-					<h2><span>Example</span></h2>
+					<h2><span>Streamlined content</span></h2>
+					<img src="img/Ezijet-example.jpg" />
+				</section>
+
+				<section class="">
+					<h2><span>Simplify navigation</span></h2>
 					<img src="img/percutane.png" />
 				</section>
 
@@ -306,11 +311,11 @@
 				<section class="headline">
 
 					<ol>
-						<li>Gather & track data</li>
+						<h3><li>Gather & track data</li></h3>
 
-						<li>Go Responsive</li>
+						<h3><li>Go Responsive</li></h3>
 
-						<li>Master your content</li>
+						<h3><li>Master your content</li></h3>
 
 					</ol>
 				</section>
